--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
