--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.2",
+    "@contentful/rich-text-react-renderer": "^15.16.2",
     "@next/font": "13.0.7",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
