--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ellipsis-text": "^1.2.1",
     "swiper": "^8.4.5",
     "webfontloader": "^1.6.28"
   },
